[package]
name = "echo-hermit"
version = "0.1.0"
authors = ["Sven Assmann <sven.assmann.it@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[target.'cfg(target_os = "hermit")'.dependencies]
hermit-sys = { version = "0.1.*", features = ["smoltcp", "dhcpv4"] }

#async-std = "1.9.0"

[profile.release]
opt-level = 3

[profile.dev]
opt-level = 1