[package]
name = "hello-hermit"
version = "0.1.0"
authors = ["Sven Assmann <sven.assmann.it@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[target.'cfg(target_os = "hermit")'.dependencies]
hermit-sys = "0.1.*"

[profile.release]
opt-level = 3

[profile.dev]
opt-level = 1