[package]
name = "echo-hermit"
version = "0.1.0"
authors = ["Sven Assmann <sven.assmann.it@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiny_http = { path = "../tiny-http" }
ascii = "1.0.0"

[target.'cfg(target_os = "hermit")'.dependencies]
hermit-sys = { version = "0.1.*", features = ["smoltcp", "dhcpv4"] }

[profile.release]
opt-level = 3

[profile.dev]
opt-level = 1